Fix styling to display on small screen size and desktop

--- a/style.css
+++ b/style.css
@@ -6,10 +6,8 @@
 
 body {
   height: 100vh;
-  width: 100%;
   display: flex;
   flex-direction: column;
-  min-width: 520px;
 }
 
 h1 {
@@ -19,18 +17,15 @@ h1 {
 
 .hero {
   display: flex;
-  gap: 5px;
-  flex-wrap: wrap;
+  gap: 10px;
   margin: 10px 30px;
   justify-content: center;
 }
 
 .colors {
+  width: 68px;
   border: 2px solid black;
   padding: 10px;
-  flex-grow: 0;
-  max-width: 68px;
-  max-height: 100%;
 }
 
 .colors button,
@@ -75,16 +70,12 @@ h1 {
 #container {
   display: flex;
   flex-wrap: wrap;
-  flex: 0 1 auto;
-  min-height: 80vh;
-  min-width: 80vh;
-  aspect-ratio: 1/1;
   border: 2px solid black;
-  overflow: auto;
+  width: 460px;
+  height: 460px;
 }
 
 div {
-  flex: auto;
   padding: 0px;
   margin: 0px;
 }
@@ -124,24 +115,22 @@ div {
 
 @media (max-width: 628px) {
   .hero {
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
   }
 
   .hero .colors {
-    max-width: 345px;
+    display: flex;
     justify-content: center;
     align-items: center;
+    gap: 12px;
+    width: 370px;
   }
 
-  .hero .colors button#random {
-    position: relative;
-    top: -5px;
-  }
-
-  .hero .colors input {
-    position: relative;
-    top: -4px;
+  #container {
+    width: 370px;
+    height: 370px;
   }
 }
